<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="exercise_hint">Exercise</string>
    <string name="weight_label">Weight</string>
    <string name="reps_hint">Reps</string>
    <string name="add_exercise_accessibility">Add exercise</string>
    <string name="weight_mask">%1$s kg</string>

    <string name="exercise_accessibility">Exercise</string>
    <string name="weight_accessibility">Weight</string>
    <string name="repetitions_accessibility">Repetitions</string>
    <string name="share_accessibility_label">Share</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="share_workout_name">%1$s\'s workout</string>
</resources>