<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exercise_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/weight_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/exercise_name"
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/exercise_accessibility"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="240"
                android:minWidth="90dp"
                android:textSize="14sp"
                tools:text="Exercise" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/weight_label"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/exercise_input"
            app:layout_constraintEnd_toStartOf="@id/reps_input"
            app:layout_constraintStart_toEndOf="@id/exercise_input"
            app:layout_constraintTop_toTopOf="@id/exercise_input"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/weight_accessibility"
                android:imeOptions="actionNext"
                android:digits="0123456789kg "
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:minWidth="90dp"
                android:textSize="14sp"
                tools:text="Weight" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reps_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/reps_hint"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/exercise_input"
            app:layout_constraintEnd_toStartOf="@id/action_button"
            app:layout_constraintStart_toEndOf="@id/weight_input"
            app:layout_constraintTop_toTopOf="@id/exercise_input"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repetitions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/repetitions_accessibility"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:minWidth="90dp"
                android:textSize="14sp"
                tools:text="Reps" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/action_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/add_exercise_accessibility"
            android:focusable="true"
            android:src="@drawable/ic_plus_circle"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/exercise_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/reps_input"
            app:layout_constraintTop_toTopOf="@id/exercise_input"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
